Fixed Wasm Rendering problem